Fixed submodule path.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "external/tm"]
 	path = external/tm
-	url = C:\\Users\\TM\\Dropbox\\repositories\\tm.git
+	url = R:\\tm.git
 	branch = master
